--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 </head>
 
-<body style="width:100vw;overflow-x:hidden;">
+<body class="mb-0" style="max-width:100vw;">
     <div id='header'></div>
-    <header style="z-index:5000;box-shadow:0px 10px 50px 0px blue;position:sticky;width:100vw;border-style:solid;border-bottom-width:0.6px;border-bottom-color:white;border:outset;border-bottom-width:2px; top:0px; padding:5px;background:linear-gradient(90deg,red,blue)">
+    <header class="header">
 
         <nav class="navbar navbar-expand-lg navbar-light br">
             <a class="navbar-brand" href="https://www.youtube.com/@subhrajotichakrabarty/featured">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" style="float:left;height:50px;width:50px;border-radius:100px; box-shadow:0 4px 8px white;   " class=" d-md-inline" />
-                <h3 class="text-light pt-2 ml-5 pl-2 ">Science with Subhrajoti</h3>
+                <h3 class="text-light pt-2 ml-5 pl-2 d-none d-md-block">Science with Subhrajoti</h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="btn"><i class="fa fa-bars"></i></span>
@@ -42,20 +42,21 @@
                     <a class="nav-item nav-link text-light" href="#videos">Some of my videos</a>
                     <a class="nav-item nav-link text-light" href="#projects">Some fun programs</a>
                     <a class="nav-item nav-link text-light" href="#details">My details</a>
+                    <a class="nav-item nav-link text-light" href="https://sjcspace.ccbp.tech/">My Space's webpage</a>
                 </div>
             </div>
         </nav>
     </header>
-    <div>
+    <div class="mb-0">
         <div class="d-flex flex-column flex-md-row" style="height:100vh;">
-            <div class="d-none d-md-block text-light text-center p-2" style="position:sticky;height:100vh;background:linear-gradient(90deg,red,blue)">
+            <div class="d-none d-md-block text-light text-center p-2" style="position:sticky;height:100%h;background:linear-gradient(90deg,red,blue)">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
-        height: 300px; width:300px;box-shadow:1px 1px 30px 0px yellow;margin-top:15px;" />
-                <h1>Subhrajoti Chakrabarty</h1>
-                <h4 class="text-light mt-1">An Aspiring Programmer</h4>
-                <h4 class="text-light mt-2">Mobile.no: 8436514806</h4>
-                <h4 class="text-light">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
-                <div class="mt-2">
+        height: 300px; width:300px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:15px;" />
+                <h1 class="mt-lg-5">Subhrajoti Chakrabarty</h1>
+                <h4 class="text-light mt-1 mt-lg-5 mt-xl-2">An Aspiring Programmer</h4>
+                <h4 class="text-light mt-2  mt-lg-5 mt-xl-2">Mobile.no: 8436514806</h4>
+                <h4 class="text-light mt-lg-5 mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
+                <div class="mt-2 mt-lg-5 mt-xl-2">
                     <a href="https://www.youtube.com/@subhrajotichakrabarty/featured" target="_blank"><button class="a_btn" onmouseover="changeColor()" onmouseout="resetColor()" id="button">
                             Visit Channel
                         </button></a>
@@ -200,12 +201,11 @@
                         <div class="row p-0  ml-auto mr-auto ">
                             <div class="bg1 col-12 col-lg-6 d-md-none">
                                 <div class="d-flex flex-row mg" style="margin-bottom:5px  ">
-                                    <article class=" d-flex flex-row " style="height:;padding:15px;width:100%; border:solid 1px white ;background:linear-gradient(90deg,red,blue);max-width:100%; box-shadow: 10px 10px 50px 5px yellow; ">
-                                        <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:0px 15px 0px 0px;border-top-left-radius: 15px;border-bottom-left-radius:15px;
-    max-height: 500px; max-width:40%; ">
+                                    <article class="d-flex flex-row" style="padding:15px;width:100%; border:solid 1px white ;background:linear-gradient(90deg,red,blue);max-width:100%; box-shadow: 1px 1px 30px 5px yellow; ">
+                                        <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:0px 15px 0px 0px;border-top-left-radius: 15px;border-bottom-left-radius:15px;max-height:500px;max-width:40%;">
                                         <div class="pt-1 mb-5">
-                                            <h1 style="color:white ;font-weight:bold;font-size:35px; text-transform:capitalize; height: ;width:auto; " class="test">Subhrajoti<br> Chakrabarty</h1>
-                                            <p style="color:white;;margin:5px 5px 20px 0px;font-weight:bold; width:230px;" class="test1">
+                                            <h1 style="color:white;font-weight:bold;font-size:30px;width:auto;" class="test">Subhrajoti<br> Chakrabarty</h1>
+                                            <p style="color:white;;margin:5px 5px 20px 0px;font-weight:bold; width:190px;" class="test1">
                                                 I think Learning new things and improving one's knowledge is the way of Life
                                             </p>
                                             <div class="mt-5">
@@ -217,10 +217,9 @@
                                     </article>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-12 m-0 p-0" style=" overflow-y:auto;font-size:20px;max-height:412px;
-                    border:solid 1px white;margin:5px 0px;background:linear-gradient(90deg,red,blue);box-shadow: 10px 10px 50px 5px yellow;">
+                            <div class="col-12 col-md-12 m-0 p-0 table">
 
-                                <table class="tabledec mg1" title="click it to see the contents" style="width:100%; box-shadow: 10px 10px 50px 5px yellow;">
+                                <table class="tabledec mg1" title="click it to see the contents" style="width:100%;">
                                     <style>
                                         .tabledec {
                                             border-style: solid;
@@ -232,7 +231,6 @@
                                         th {
                                             padding: 5px;
                                             border-style: solid;
-                                            border-width: 1px;
                                             color: white;
                                             border-style: solid;
                                             border-width: 1px;
@@ -424,15 +422,15 @@
                             }
                         </style>
                         <div class="clearfix sectext">
-                            <a href="https://youtu.be/cccl5G_pPL4" class="cr" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703094/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_32_09_g5ffau.png" style="height:150px;width:250px;margin: 5px;padding:5px;border-radius:15px;"></a>
+                            <a href="https://youtu.be/cccl5G_pPL4" class="cr" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703094/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_32_09_g5ffau.png" style="height:150px;width:200px;margin: 5px;padding:5px;border-radius:15px;"></a>
                             <h3 class="test1" style="color:white;word-wrap:break-word;margin-top:15px; ">Introduction to Integration<br>in a very easy and lucid way.</h3>
                         </div>
                         <div class="d-flex flex-row clearfix sectext1" style="">
-                            <a href="https://youtu.be/qTeJC-u4XOQ" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703108/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_35_14_gf99ag.png" style="height:150px;width:250px;margin: 5px;padding:5px;border-radius:15px;"></a>
+                            <a href="https://youtu.be/qTeJC-u4XOQ" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703108/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_35_14_gf99ag.png" style="height:150px;width:200px;margin: 5px;padding:5px;border-radius:15px;"></a>
                             <h3 class="test1" style="color:white;word-wrap:break-word;margin-top:15px;">Ehrenfest's Theorem in a very<br> easy and interesting way.</h3>
                         </div>
                         <div class="clearfix sectext2">
-                            <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" class="cr" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703115/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_36_48_imq8bu.png" style="height:150px;width:250px;margin: 5px;padding:5px;border-radius:15px;"></a>
+                            <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" class="cr" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697703115/71_INTRODUCTION_TO_INTEGRATION_IN_A_VERY_EASY_AND_INTERESTING_WAY__AND_PHYSICAL_SIGNIFICANCE_-_YouTube_-_Google_Chrome_19-10-2023_13_36_48_imq8bu.png" style="height:150px;width:200px;margin: 5px;padding:5px;border-radius:15px;"></a>
                             <h3 class="test1" style="color:white;word-wrap:break-word;margin-top:15px;">Google's Bard and Extended<br> reality can bring Jarvis to life!
                             </h3>
                         </div>
@@ -459,81 +457,81 @@
                             <p id="messagePara"></p>
                         </div>
                     </div>
-                    <a href="https://www.youtube.com/@subhrajotichakrabarty/featured" target="_blank"><span style="margin-left:15px;font-weight:bold;margin:15px;">and many more...</span></a>
-                    <div style="width:100%;text-align:center;position:relative;">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14723.779125796807!2d88.04786523754031!3d22.69309941716375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8797a5fd4e101%3A0xef6bf71faa4eb97d!2sMato%2C%20West%20Bengal%20711408!5e0!3m2!1sen!2sin!4v1703161561741!5m2!1sen!2sin" width="600px" height="450" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div style="width:100%;text-align:center;position:relative;" class="br">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14723.779125796807!2d88.04786523754031!3d22.69309941716375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8797a5fd4e101%3A0xef6bf71faa4eb97d!2sMato%2C%20West%20Bengal%20711408!5e0!3m2!1sen!2sin!4v1703161561741!5m2!1sen!2sin" width="100%" height="350" style="border:0; " allowfullscreen="" loading="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
+
+                    <style>
+                        .body_color {
+                            background-color: #19232d;
+                        }
+
+                        .img1 {
+                            height: 30px;
+                            width: 50px;
+                            margin: 20px 0;
+                        }
+
+                        .font-icon {
+                            border-radius: 30px;
+                            background-color: #202b36;
+                            height: 60px;
+                            width: 60px;
+                            padding-top: 16px;
+                            font-size: 30px;
+                            color: #5a7184;
+                        }
+
+                        p,
+                        li {
+                            color: #5a7184;
+                        }
+                    </style>
+                    <footer id="details" class="body_color container-fluid p-0">
+                        <div class="row p-0 m-0">
+                            <div class="col-12 col-md-6 p-3 text-center">
+                                <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" class="img1" alt="">
+                                <ul class="p-0" style="list-style-type:none;display:flex;flex-direction:row;justify-content:center;">
+                                    <li><a href="https://twitter.com/Subhrajoti2003" target="_blank"><i class="font-icon fa-brands fa-twitter m-2" aria-hidden="true"></i></a></li>
+                                    <li><a href="subhrajotichakrabarty2018@gmail.com" target="_blank"><i class="font-icon fa-brands fa-google m-2" aria-hidden="true"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/subhrajoti-chakrabarty-254728270/" target="_blank"><i class="font-icon fa-brands fa-linkedin m-2" aria-hidden="true"></i></a></li>
+                                </ul>
+                                <p style="font-size:15px;">Mato, near GopalTola, Howrah, West-Bengal, India,711408.</p>
+                            </div>
+                            <div class="col-12 col-md-6 d-flex flex-row ">
+
+                                <div>
+                                    <p style="font-weight:bold;font-size:30px;margin-bottom:15px;">Contact Me:</p>
+                                    <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
+
+                                        <li>Email:</li>
+                                        <li class="">subhrajotichakrabarty<br>2018@gmail.com</li>
+                                        <li>Ph.no:</li>
+                                        <li class="">8436514806</li>
+
+                                    </ul>
+                                </div>
+                                <div>
+                                    <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
+                                        <li><a href="https://github.com/Subhrajoti">My Github Account</a></li>
+                                        <li style="margin-top:50px;"><a href="" onclick="scrollToTop()">To Top of<br> the page</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <hr class="footer_hr">
+                            <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
+                        </div>
+                    </footer>
+
                 </div>
             </div>
-
         </div>
 
-        <style>
-            .body_color {
-                background-color: #19232d;
-            }
 
-            .img1 {
-                height: 30px;
-                width: 50px;
-                margin: 20px 0;
-            }
 
-            .font-icon {
-                border-radius: 30px;
-                background-color: #202b36;
-                height: 60px;
-                width: 60px;
-                padding-top: 16px;
-                font-size: 30px;
-                color: #5a7184;
-            }
-
-            p,
-            li {
-                color: #5a7184;
-            }
-        </style>
-        <footer id="details" class="body_color container-fluid p-0">
-            <div class="row p-0 m-0">
-                <div class="col-12 col-md-6 p-3 text-center">
-                    <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" class="img1" alt="">
-                    <ul class="p-0" style="list-style-type:none;display:flex;flex-direction:row;justify-content:center;">
-                        <li><a href="https://twitter.com/Subhrajoti2003" target="_blank"><i class="font-icon fa-brands fa-twitter m-2" aria-hidden="true"></i></a></li>
-                        <li><a href="subhrajotichakrabarty2018@gmail.com" target="_blank"><i class="font-icon fa-brands fa-google m-2" aria-hidden="true"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/subhrajoti-chakrabarty-254728270/" target="_blank"><i class="font-icon fa-brands fa-linkedin m-2" aria-hidden="true"></i></a></li>
-                    </ul>
-                    <p style="font-size:15px;">Mato, near GopalTola, Howrah, West-Bengal, India,711408.</p>
-                </div>
-                <div class="col-12 col-md-6 d-flex flex-row ">
-
-                    <div>
-                        <p style="font-weight:bold;font-size:30px;margin-bottom:15px;">Contact Me:</p>
-                        <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
-
-                            <li>Email:</li>
-                            <li>subhrajotichakrabarty<br>2018@gmail.com</li>
-                            <li>Ph.no:</li>
-                            <li>8436514806</li>
-                            <li>Subhrajoti</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
-                            <li><a href="https://github.com/Subhrajoti">My Github Account</a></li>
-                            <li style="margin-top:50px;"><a href="#header">To Top of<br> the page</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <hr style="border:1px solid #5a7184;
-            background-color: #5a7184;
-            color: #5a7184;width:100vw;margin: auto;">
-                <p class="text-center ml-auto mr-auto">2024 by Sjc. Created with Bootstrap</p>
-            </div>
-        </footer>
     </div>
 
-<script src="script.js"></script>
+
 
 </body>
 
