--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         table {
             text-transform: uppercase;
         }
+
+        .h-90 {
+            height: 89vh;
+        }
     </style>
 
 </head>
@@ -47,9 +51,9 @@
             </div>
         </nav>
     </header>
-    <div class="mb-0">
-        <div class="d-flex flex-column flex-md-row" style="height:100vh;">
-            <div class="d-none d-md-block text-light text-center p-2" style="position:sticky;height:100%h;background:linear-gradient(90deg,red,blue)">
+    <div class="mb-0 h-90">
+        <div class="d-flex flex-column flex-md-row">
+            <div class="d-none d-md-block text-light text-center p-2" style="z-index:0;position:sticky;background:linear-gradient(90deg,red,blue)">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
         height: 300px; width:300px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:15px;" />
                 <h1 class="mt-lg-5">Subhrajoti Chakrabarty</h1>
@@ -62,7 +66,7 @@
                         </button></a>
                 </div>
             </div>
-            <div class="p-1 br" style="height:100vh;overflow-y:auto;">
+            <div class="p-1 br" style="height:90vh;overflow-y:auto;">
                 <div id="section1 " class="">
                     <div style=" ">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -329,9 +333,9 @@
                             <ul style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
                                 <li style="color:white;">Former CBSE student</li>
                                 <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
-                                <li style="color:white;">Pursed Science in 12th and got 73.2% in CBSE too</li>
+                                <li style="color:white;">Pursued Science in 12th and got 73.2% in CBSE too</li>
                                 <li style="color:white;">currently pursuing Bsc Physics Honours in University Of Calcutta</li>
-                                <li style="color:white;">studying at NxtWave CCBP Academy 4.0</li>
+                                <li style="color:white;">studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development</li>
                             </ul>
                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
                             <ul id="science" style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
