--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <div class="mb-0 h-90">
         <div class="d-flex flex-column flex-md-row">
-            <div class="d-none d-md-block text-light text-center p-2" style="z-index:0;position:sticky;background:linear-gradient(90deg,red,blue)">
+            <div class="d-none d-md-block text-light text-center p-2" style="z-index:0;position:sticky;background:radial-gradient(blue,red)">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
         height: 300px; width:300px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:15px;" />
                 <h1 class="mt-lg-5">Subhrajoti Chakrabarty</h1>
@@ -152,11 +152,11 @@
                         }
 
                         td a:hover {
-                            transform: scale(3);
+                            background-color: yellow;
                         }
 
-                        td a:hover {
-                            background-color: yellow;
+                        tr:hover {
+                            box-shadow: 1px 1px 10px 5px lightgreen inset;
                         }
 
                         img {
@@ -504,7 +504,7 @@
                             </div>
                             <div class="col-12 col-md-6 d-flex flex-row ">
 
-                                <div>
+                                <div class="mr-sm-5 mr-md-0">
                                     <p style="font-weight:bold;font-size:30px;margin-bottom:15px;">Contact Me:</p>
                                     <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
 
@@ -515,7 +515,7 @@
 
                                     </ul>
                                 </div>
-                                <div>
+                                <div class="ml-sm-5 ml-md-0">
                                     <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
                                         <li><a href="https://github.com/Subhrajoti">My Github Account</a></li>
                                         <li style="margin-top:50px;"><a href="" onclick="scrollToTop()">To Top of<br> the page</a></li>
@@ -534,7 +534,6 @@
 
 
     </div>
-
 <script src="script.js"></script>
 
 </body>
