--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div id='header'></div>
     <header class="header">
 
-        <nav class="navbar navbar-expand-lg navbar-light br">
+        <nav class="navbar navbar-expand-lg navbar-light br" style="">
             <a class="navbar-brand" href="https://www.youtube.com/@subhrajotichakrabarty/featured">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" style="float:left;height:50px;width:50px;border-radius:100px; box-shadow:0 4px 8px white;   " class=" d-md-inline" />
-                <h3 class="text-light pt-2 ml-5 pl-2 d-none d-md-block">Science with Subhrajoti</h3>
+                <h2 class="text-light pt-1 ml-5 pl-2 d-none d-md-block">Science with Subhrajoti</h2>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="btn"><i class="fa fa-bars"></i></span>
@@ -55,9 +55,9 @@
         <div class="d-flex flex-column flex-md-row">
             <div class="d-none d-md-block text-light text-center p-2" style="z-index:0;position:sticky;background:radial-gradient(blue,red)">
                 <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
-        height: 300px; width:300px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:15px;" />
-                <h1 class="mt-lg-5">Subhrajoti Chakrabarty</h1>
-                <h4 class="text-light mt-1 mt-lg-5 mt-xl-2">An Aspiring Programmer</h4>
+        height: 300px; width:300px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:10px;" />
+                <h1 class="mt-lg-3">Subhrajoti Chakrabarty</h1>
+                <h4 class="text-light mt-lg-5 mt-xl-2">An Aspiring Programmer</h4>
                 <h4 class="text-light mt-2  mt-lg-5 mt-xl-2">Mobile.no: 8436514806</h4>
                 <h4 class="text-light mt-lg-5 mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
                 <div class="mt-2 mt-lg-5 mt-xl-2">
@@ -534,7 +534,8 @@
 
 
     </div>
-<script src="script.js"></script>
+
+
 
 </body>
 
