--- a/index.html
+++ b/index.html
@@ -518,25 +518,18 @@
                                 <div class="ml-sm-5 ml-md-0">
                                     <ul class="m-2" style="font-size:18px;line-height:2em;list-style-type:none;padding:0px;">
                                         <li><a href="https://github.com/Subhrajoti">My Github Account</a></li>
-                                        <li style="margin-top:50px;"><a href="" onclick="scrollToTop()">To Top of<br> the page</a></li>
+                                        <li style="margin-top:50px;"><a href="" onclick="scrollToTop()">To Top of<i class="fa-solid fa-arrow-up m-2 text-white"></i><br> the page</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <hr class="footer_hr">
                             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
                         </div>
-                    </footer>
-
+                        </footer>
+                     </div>
                 </div>
             </div>
         </div>
-
-
-
-    </div>
-<script src="script.js"></script>
-
-
-</body>
-
+    <script src="script.js"></script>
+    </body>
 </html>
