--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <img id="testImage" class="" src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
         height:30%; width:250px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:10px;" />
                         <h1 class="mt-lg-3">Subhrajoti Chakrabarty</h1>
-                        <h4 class="text-light mt-lg-5 mt-xl-2">An Aspiring Programmer</h4>
-                        <h4 class="text-light mt-2  mt-lg-5 mt-xl-2">Mobile.no: 8436514806</h4>
-                        <h4 class="text-light mt-lg-5 mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
-                        <div class="mt-2 mt-lg-5 mt-xl-2">
+                        <h4 class="text-light mt-xl-2">An Aspiring Programmer</h4>
+                        <h4 class="text-light mt-2 mt-xl-2">Mobile.no: 8436514806</h4>
+                        <h4 class="text-light mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
+                        <div class="mt-2 mt-xl-2">
                             <a href="https://www.youtube.com/@subhrajotichakrabarty/featured" target="_blank"><button class="a_btn" onmouseover="changeColor()" onmouseout="resetColor()" id="button">
                                     Visit Channel
                                 </button></a>
