--- a/index.html
+++ b/index.html
@@ -68,41 +68,44 @@
                         <div id="section1 " class="">
                             <div style=" ">
                                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                    <ol class="carousel-indicators">
-                                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-                                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-                                    </ol>
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item  active" title="Coding is about talking with the computer" style="position:relative;text-align:left;">
-                                            <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" target="_blank"> <img src="https://img.freepik.com/free-vector/binary-code-white-background-with-floating-numbers_1017-25331.jpg?w=740&amp;t=st=1689343529~exp=1689344129~hmac=cd048d2b408060e761a0cb6c17fce6aad50d1a0da79b2c556a934455fe31fa1d" title="Coding is about talking with the computer" class="d-block w-100 image" alt="..."></a>
-                                            <span style=" color:white;position:absolute;top:27%;right:5%;opacity:0.9;background-color:#b0b310;border-radius:15px;padding:15px;">
-                                                "Coding is the Language and
-                                                the way to communicate with
-                                                the Computers."
-                                            </span>
-                                        </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item  active" title="Coding is about talking with the computer" style="position:relative;text-align:left;">
+                        <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1710536049/360_F_556989229_lBBasUTWiFGKyhyeUXiFcQSY0IJYAKRv_feedlm.jpg" title="Coding is about talking with the computer" class="d-block w-100 image" alt="..."></a>
+                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                            <p style=" color:white;text-align:center">"Coding is the Language and
+                                the way to communicate with
+                                the Computers."</p>
+                        </div>
+                    </div>
 
-                                        <div class="carousel-item" title="Introducing the Apple vision pro" style="position:relative;">
-                                            <a href="https://www.youtube.com/watch?v=dYnRwh10B68" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412747/Document1_-_Microsoft_Word_11-07-2023_17_43_36_yqdpj8.png" class="d-block w-100 image" title="Introducing the Apple vision pro" alt="..."></a>
-                                            <span style="background-color:#b0b310; opacity:0.9;border-radius:15px;padding:15px;position:absolute;color:white; top:50%;left:5%;">Introducing Apple Vision Pro
-                                                in my words.</span>
-                                        </div>
-                                        <div class="carousel-item" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " style="position:relative;">
-                                            <a href="https://www.youtube.com/watch?v=yAMjejRtmDw" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412763/Document1_-_Microsoft_Word_27-05-2023_13_53_27_qoy1m7.png" class="d-block w-100 image" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " alt="..."></a>
-                                            <span style="border-radius:15px;opacity:0.9;padding:5px;background-color:#b0b310; margin:5px;position:absolute; bottom:5px; right:10px; color:white;">Interesting comparision about
-                                                AMD FSR 2.1 VS NVIDIA DLSS 3.0</span>
-                                        </div>
-                                    </div>
-                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
+                    <div class="carousel-item" title="Introducing the Apple vision pro" style="position:relative;">
+                        <a href="https://www.youtube.com/watch?v=dYnRwh10B68" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412747/Document1_-_Microsoft_Word_11-07-2023_17_43_36_yqdpj8.png" class="d-block w-100 image" title="Introducing the Apple vision pro" alt="..."></a>
+                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                            <p style=" color:white;text-align:center">Introducing Apple Vision Pro
+                                in my words.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " style="position:relative;">
+                        <a href="https://www.youtube.com/watch?v=yAMjejRtmDw" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412763/Document1_-_Microsoft_Word_27-05-2023_13_53_27_qoy1m7.png" class="d-block w-100 image" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " alt="..."></a>
+                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                            <p style=" color:white;text-align:center"> AMD FSR 2.1 VS NVIDIA DLSS 3.0</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
                             </div>
                             <marquee style="margin:5px;color:white;  text-decoration:underline;margin-bottom:0px;">
                                 <b>THIS IS A YOUTUBE CHANNEL FOR SCIENCE AND TECHNOLOGY, SO IF INTERESTED DO MAKE SURE TO <i style="color: red;">LIKE, SHARE AND <strong style=" color: red;">SUBSCRIBE</strong></i></b>
