--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <img id="testImage" class="" src="https://res.cloudinary.com/dewooaimb/image/upload/v1689413425/IMG_20230522_095957960_v14nbo.jpg" style="float:left; margin:15px; 
         height:30%; width:250px;border-radius:15px;box-shadow:0px 1px 30px 0px blue;margin-top:10px;" />
                         <h1 class="mt-lg-3">Subhrajoti Chakrabarty</h1>
-                        <h4 class="text-light mt-xl-2">An Aspiring Programmer</h4>
-                        <h4 class="text-light mt-2 mt-xl-2">Mobile.no: 8436514806</h4>
+                        <h4 class="text-light mt-lg-2 mt-xl-2">An Aspiring Programmer</h4>
+                        <h4 class="text-light mt-2  mt-xl-2">Mobile.no: 8436514806</h4>
                         <h4 class="text-light mt-xl-0">Email: subhrajotichakrabarty<br>2018@gmail.com</h4>
                         <div class="mt-2 mt-xl-2">
                             <a href="https://www.youtube.com/@subhrajotichakrabarty/featured" target="_blank"><button class="a_btn" onmouseover="changeColor()" onmouseout="resetColor()" id="button">
@@ -68,44 +68,44 @@
                         <div id="section1 " class="">
                             <div style=" ">
                                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item  active" title="Coding is about talking with the computer" style="position:relative;text-align:left;">
-                        <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1710536049/360_F_556989229_lBBasUTWiFGKyhyeUXiFcQSY0IJYAKRv_feedlm.jpg" title="Coding is about talking with the computer" class="d-block w-100 image" alt="..."></a>
-                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
-                            <p style=" color:white;text-align:center">"Coding is the Language and
-                                the way to communicate with
-                                the Computers."</p>
-                        </div>
-                    </div>
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+                                    </ol>
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item  active" title="Coding is about talking with the computer" style="position:relative;text-align:left;">
+                                            <a href="https://www.youtube.com/watch?v=HeUnkj1g8dE" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1710536049/360_F_556989229_lBBasUTWiFGKyhyeUXiFcQSY0IJYAKRv_feedlm.jpg" title="Coding is about talking with the computer" class="d-block w-100 image" alt="..."></a>
+                                            <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                                                <p style=" color:white;text-align:center">"Coding is the Language and
+                                                    the way to communicate with
+                                                    the Computers."</p>
+                                            </div>
+                                        </div>
 
-                    <div class="carousel-item" title="Introducing the Apple vision pro" style="position:relative;">
-                        <a href="https://www.youtube.com/watch?v=dYnRwh10B68" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412747/Document1_-_Microsoft_Word_11-07-2023_17_43_36_yqdpj8.png" class="d-block w-100 image" title="Introducing the Apple vision pro" alt="..."></a>
-                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
-                            <p style=" color:white;text-align:center">Introducing Apple Vision Pro
-                                in my words.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " style="position:relative;">
-                        <a href="https://www.youtube.com/watch?v=yAMjejRtmDw" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412763/Document1_-_Microsoft_Word_27-05-2023_13_53_27_qoy1m7.png" class="d-block w-100 image" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " alt="..."></a>
-                        <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
-                            <p style=" color:white;text-align:center"> AMD FSR 2.1 VS NVIDIA DLSS 3.0</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
+                                        <div class="carousel-item" title="Introducing the Apple vision pro" style="position:relative;">
+                                            <a href="https://www.youtube.com/watch?v=dYnRwh10B68" target="_blank"><img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412747/Document1_-_Microsoft_Word_11-07-2023_17_43_36_yqdpj8.png" class="d-block w-100 image" title="Introducing the Apple vision pro" alt="..."></a>
+                                            <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                                                <p style=" color:white;text-align:center">Introducing Apple Vision Pro
+                                                    in my words.</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " style="position:relative;">
+                                            <a href="https://www.youtube.com/watch?v=yAMjejRtmDw" target="_blank"> <img src="https://res.cloudinary.com/dewooaimb/image/upload/v1689412763/Document1_-_Microsoft_Word_27-05-2023_13_53_27_qoy1m7.png" class="d-block w-100 image" title="AMD FSR 2.1 VS NVIDIA DLSS 3.0 " alt="..."></a>
+                                            <div style=" color:white;position:sticky;opacity:0.9;background-color:#b0b310;padding:15px;">
+                                                <p style=" color:white;text-align:center"> AMD FSR 2.1 VS NVIDIA DLSS 3.0</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
                             </div>
                             <marquee style="margin:5px;color:white;  text-decoration:underline;margin-bottom:0px;">
                                 <b>THIS IS A YOUTUBE CHANNEL FOR SCIENCE AND TECHNOLOGY, SO IF INTERESTED DO MAKE SURE TO <i style="color: red;">LIKE, SHARE AND <strong style=" color: red;">SUBSCRIBE</strong></i></b>
@@ -207,7 +207,7 @@
                                     padding: 15px;
                                 }
                             </style>
-                            <div style="max-width:100%;  margin-top:5px; " class="container-fluid p-0 m-0">
+                            <div style="max-width:100%;  margin-top:5px;border:1px white solid; " class="container-fluid p-0 m-0">
                                 <div class="row p-0  ml-auto mr-auto ">
                                     <div class="bg1 col-12 col-lg-6 d-md-none">
                                         <div class="d-flex flex-row mg" style="margin-bottom:5px  ">
@@ -447,14 +447,23 @@
                                 </table>
                             </div>
 
-                            <div class="counter-container" id="projects">
-                                <div>
-                                    <img id="puppyImage" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-dynamic-webapps/white-puppy-img.png" class="puppy-image" />
-                                    <div class="d-flex flex-row justify-content-center mt-4">
-                                        <i id="likeIcon" class="fa fa-thumbs-up like-icon" aria-hidden="true"></i>
-                                        <button id="likeButton" class="like-button ml-2" onclick="onClickLikeButton()">
-                                            Like
-                                        </button>
+                            <div class="todos-bg-container">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h1 class="todos-heading">Todos</h1>
+                                            <h1 class="create-task-heading">
+                                                Create <span class="create-task-heading-subpart">Task</span>
+                                            </h1>
+                                            <input type="text" id="todoUserInput" class="todo-user-input" />
+                                            <button class="add-todo-button" id="addTodoButton">Add</button>
+                                            <h1 class="todo-items-heading">
+                                                My <span class="todo-items-heading-subpart">Tasks</span>
+                                            </h1>
+                                            <div class="todoItemsContainer">
+                                                <ul class="todo-items-container" id="todoItemsContainer"></ul>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -472,13 +481,9 @@
                             <div id="details" style="width:100%;text-align:center;position:relative;" class="br">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14723.779125796807!2d88.04786523754031!3d22.69309941716375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8797a5fd4e101%3A0xef6bf71faa4eb97d!2sMato%2C%20West%20Bengal%20711408!5e0!3m2!1sen!2sin!4v1703161561741!5m2!1sen!2sin" width="100%" height="350" style="border:0; " allowfullscreen="" loading="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
@@ -543,13 +548,6 @@
             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
         </div>
     </footer>
-<script src="script.js"></script>
-<script src="script1.js"></script>
-
-
-
-
-
 </body>
 
 </html>
