--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Science with Subhrajoti</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <style>
         body {
             font-weight: bold;
