--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
                                             <div class="todoItemsContainer">
                                                 <ul class="todo-items-container" id="todoItemsContainer"></ul>
                                             </div>
+                                            <div class="d-flex"> <button class="add-todo-button ml-auto" id="saveTodoButton">Save</button></div>
                                         </div>
                                     </div>
                                 </div>
