--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                                     </tbody>
                                 </table>
                             </div>
-
+                        <div id="projects">
                             <div class="todos-bg-container">
                                 <div class="container">
                                     <div class="row">
@@ -480,6 +480,7 @@
                                     <p id="messagePara"></p>
                                 </div>
                             </div>
+                        </div>
                             <div id="details" style="width:100%;text-align:center;position:relative;" class="br">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14723.779125796807!2d88.04786523754031!3d22.69309941716375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8797a5fd4e101%3A0xef6bf71faa4eb97d!2sMato%2C%20West%20Bengal%20711408!5e0!3m2!1sen!2sin!4v1703161561741!5m2!1sen!2sin" width="100%" height="350" style="border:0; " allowfullscreen="" loading="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
