--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Science with Subhrajoti</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
-    
     <style>
         body {
             font-weight: bold;
@@ -189,6 +188,7 @@
 
                                     color: white;
                                     border: 1px solid white;
+                                    transition:ease-in .5;
                                 }
 
                                 .a_btn {
@@ -228,7 +228,7 @@
                                             </article>
                                         </div>
                                     </div>
-                                    <article style="text-align;left;padding: 15px;font-size:25px;">
+                                    <article style="text-align;left;padding: 20px;font-size:25px;">
                                         <section style="font-size:25px;">
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">Little Bit About Myself:</h3>
                                             <ul style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
@@ -447,40 +447,41 @@
                                     </tbody>
                                 </table>
                             </div>
-                        <div id="projects">
-                            <div class="todos-bg-container">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h1 class="todos-heading">Todos</h1>
-                                            <h1 class="create-task-heading">
-                                                Create <span class="create-task-heading-subpart">Task</span>
-                                            </h1>
-                                            <input type="text" id="todoUserInput" class="todo-user-input" />
-                                            <button class="add-todo-button" id="addTodoButton">Add</button>
-                                            <h1 class="todo-items-heading">
-                                                My <span class="todo-items-heading-subpart">Tasks</span>
-                                            </h1>
-                                            <div class="todoItemsContainer">
-                                                <ul class="todo-items-container" id="todoItemsContainer"></ul>
+                            <div id="projects">
+                                <div class="todos-bg-container">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <h1 class="todos-heading">Todos</h1>
+                                                <h1 class="create-task-heading">
+                                                    Create <span class="create-task-heading-subpart">Task</span>
+                                                </h1>
+                                                <input type="text" id="todoUserInput" class="todo-user-input" />
+                                                <button class="add-todo-button" id="addTodoButton">Add</button>
+                                                <h1 class="todo-items-heading">
+                                                    My <span class="todo-items-heading-subpart">Tasks</span>
+                                                </h1>
+                                                <div class="todoItemsContainer">
+                                                    <ul class="todo-items-container" id="todoItemsContainer"></ul>
+                                                </div>
+                                                <div class="d-flex"> <button class="add-todo-button ml-auto" id="saveTodoButton">Save</button></div>
+
                                             </div>
-                                            <div class="d-flex"> <button class="add-todo-button ml-auto" id="saveTodoButton">Save</button></div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="counter-container">
-                                <h1 class="text-light">GUESS THE RIGHT NUMBER!</h1>
-                                <div>
-                                    <div style="padding:15px;">
-                                        <label style="display:block;color:white;">GUESS NO:</label>
-                                        <input id="guessNum" style="display:block;margin:0 auto;font-weight:bold;padding:auto;height:50px;width:150px;border:2px red solid;border-radius:15px;" type="number" value="" min="0" max="100">
+                                <div class="counter-container">
+                                    <h1 class="text-light">GUESS THE RIGHT NUMBER!</h1>
+                                    <div>
+                                        <div style="padding:15px;">
+                                            <label style="display:block;color:white;">GUESS NO:</label>
+                                            <input id="guessNum" style="display:block;margin:0 auto;font-weight:bold;padding:auto;height:50px;width:150px;border:2px red solid;border-radius:15px;" type="number" value="" min="0" max="100">
+                                        </div>
+                                        <button id="checkNumber" onclick="checkNum()" class="guessbtn">GUESS</button>
+                                        <p id="messagePara"></p>
                                     </div>
-                                    <button id="checkNumber" onclick="checkNum()" class="guessbtn">GUESS</button>
-                                    <p id="messagePara"></p>
                                 </div>
                             </div>
-                        </div>
                             <div id="details" style="width:100%;text-align:center;position:relative;" class="br">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14723.779125796807!2d88.04786523754031!3d22.69309941716375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8797a5fd4e101%3A0xef6bf71faa4eb97d!2sMato%2C%20West%20Bengal%20711408!5e0!3m2!1sen!2sin!4v1703161561741!5m2!1sen!2sin" width="100%" height="350" style="border:0; " allowfullscreen="" loading="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
@@ -551,7 +552,6 @@
             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
