--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link href="https://res.cloudinary.com/dewooaimb/image/upload/v1697472092/featured_channel_thn6nw.png" rel="icon" />
-    <script src="script.js"></script>
+    
     <title>Science with Subhrajoti</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
@@ -553,6 +553,8 @@
             <p class="text-center ml-auto mr-auto">2024 by Subhrajoti. Created with Bootstrap</p>
         </div>
     </footer>
+    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
