--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                                                 <li style="color:white;">Python</li>
                                                 <li style="color:white;">BootStrap</li>
                                                 <li style="color:white;">JavaScript</li>
+                                                <li style="color:white;">SQL</li>
+                                                <li style="color:white;">MongoDB(NoSQL)</li>
                                             </ul>
                                             <section>
                                                 <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px lightgreen; margin-left:5px;"> What is Science? </h3>
