--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
                                                 <p style="font-weight:bold;text-indent:20px;color:white; ">
                                                     Science is derived from the Latin word <i>"Scientia"</i> which means "Knowledge", and Physics is derived from the Greek word "φuσισ (phusis)" meaning "Nature" itself. And in the words of Great Physicists Sir Einstien: "All of science is nothing more than the refinement of everyday thinking."</p>
                                                 <p style="font-weight:bold;text-indent:20px;  color:white;  ">
-                                                    In my view, Science subject helps us to understand the overall and ultimate perspective on what the whole existence of everything and nothing is based.
-                                                    Hence, enabling us to have proper data and algorithms(step-by-step instructions) on how things around us work in a wider view! </p>
+                                                    In my view, Science helps us understand the overall and ultimate perspective on the whole existence of everything and nothing.
+                                                    Hence, enabling us to have proper data and algorithms(step-by-step instructions) on what, why and how things around us work in a wider view! </p>
                                             </section>
                                         </section>
                                         <section style="font-size:25px;">
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; "> &gt; My motto: </h3>
                                             <p style=" font-weight:bold;text-indent:20px;color:white;">
-                                                I think that learning is the way to live life to its fullest and make it even more cherished and prosperous with the light of knowledge that we get from the Learning curve of our lives.</p>
+                                                Learning is the way to live life to its fullest and make it even more cherished and prosperous with the light of knowledge we get from our Learning curve.</p>
 
 
 
