--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                                             <ul style=" color:white;font-weight:bold;text-indent:20px;color:white; ">
                                                 <li style="color:white;">Former CBSE student</li>
                                                 <li style="color:white;">Completed my 10th with 89.6% score in CBSE</li>
-                                                <li style="color:white;">Pursued Science in 12th and got 73.2% in CBSE too</li>
-                                                <li style="color:white;">got 6.0 SGPA in Sem 6 in B.Sc Physics Honours at University Of Calcutta</li>
+                                                <li style="color:white;">Pursued Science in 12th(PCMB) in CBSE,</li>
+                                                <li style="color:white;">got 6.0 SGPA in Sem 6 in B.Sc Physics Honours at University Of Calcutta,</li>
                                                 <li style="color:white;">studying at NxtWave CCBP Academy 4.0 for Full-Stack Web Development</li>
                                             </ul>
                                             <h3 style=" font-weight:bold;color:white;text-decoration:underline;font-size:39px; box-shadow:-10px 1px 5px 5px white; margin-left:5px;">My Skills:</h3>
